2012-02-09  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c: Darwin does not have malloc.h...?
2011-09-08  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c: malloc.h has been moved on darwin 10.8? include stdlib.h instead.

2009-11-16  Francois Felix Ingrand  <felix@ingrand.net>

	* mallocPack.c (is_small): should now deal with pointer, not int.

2009-03-30  Francois Felix Ingrand  <felix@ingrand.net>

	* shashPack_f.h: Well.. not that simple... it should return 1 as
	an int.


	* shashPack.h: May be a problem of SL_PFI vs. SL_PFC
	Indeed, the matching function return a char... not an int.

2003-09-22  Francois Felix Ingrand  <felix@ingrand.net>

	* README: creation...

$Id$